fix weird gap with nav bar

--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 </head>
 
-<body style="background-color: black; margin-right: 5px; margin-left: 10px; margin-top: 0px;">
+<body style="background-color: black; margin-right: 0; margin-left: 10px; margin-top: 0;">
     <component type="typeof(App)" render-mode="ServerPrerendered" /> @*Whatever this line is/does, removing it causes the app to not work... 🤔*@
     <script src="_framework/blazor.server.js"></script> @*This stupid line is needed for some reason*@
     <div id="components-reconnect-modal"></div> @*https://stackoverflow.com/a/59395390*@
