remove some random float left that served no known purpose in my nav menu and fix anything removing it broke

--- a/PSS/Shared/NavMenu.razor
+++ b/PSS/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<nav style="align-content: space-between; float: left; margin-right: 10px; margin-left: -10px; margin-top: 0;">
+﻿<nav style="margin-right: 10px; margin-left: -10px; margin-top: 0;">
     <button onclick="location.href='/'" class="nav_btn"><span class="material-icons">&#xe3f4;</span><span class="nav_btn_text">Photos</span></button>
     <button onclick="location.href='albums'" class="nav_btn"><span class="material-icons">&#xe411;</span><span class="nav_btn_text">Albums</span></button>
     <button onclick="location.href='apply-upload'" class="nav_btn"><span class="material-icons">&#xf06f;</span><span class="nav_btn_text">Starred</span></button>
