--- a/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/wwwroot/css/UploadApply.css
@@ -7,6 +7,9 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: absolute;
+    top: 0;
+    left: 146px;
 }
 
 header button {
