--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -133,8 +133,11 @@
         {
             if (ItemExists(Path.GetFileName(allPaths[p]), dateTakenList[p])) continue; //Ignore duplicates
 
+            string filename = Path.GetFileName(allPaths[p]);
             string newDir = GenerateSortedDir(dateTakenList[p]);
-            string newPath = Path.Combine(newDir, Path.GetFileName(allPaths[p]));
+            string newPath = Path.Combine(newDir, filename); //Used for moving to new home on server.
+            
+            string newShortPath = Path.Combine(PSS.Settings.requestPath, GenerateDatePath(dateTakenList[p]), filename); //Don't need full path, just the short path (/pss_library...).
             Directory.CreateDirectory(newDir);
 
             GC.Collect(); //Dumb but it prevents file in use error for File.Move. https://stackoverflow.com/a/21137207
@@ -142,7 +145,7 @@
             try
             {
                 File.Move(allPaths[p], newPath);
-                rowsAffected += Connection.InsertMedia(newPath, dateTakenList[p]);
+                rowsAffected += Connection.InsertMedia(newShortPath, dateTakenList[p]);
             }
             catch (IOException e)
             {
@@ -155,7 +158,7 @@
                 if (!checkedAlbums[c]) continue;
                 try
                 {
-                    Connection.AddToAlbum(allPaths[p], albums[c].id);
+                    Connection.AddToAlbum(newShortPath, albums[c].id);
                 }
                 catch (Exception e)
                 {
@@ -166,7 +169,13 @@
         status = $"Added {rowsAffected} items to library";
     }
 
-    private static string GenerateSortedDir(DateTime dateTaken) => Path.Join(PSS.Settings.libFolderFullPath, dateTaken.Year.ToString(), $"{dateTaken.Month} {CultureInfo.CurrentCulture.DateTimeFormat.GetMonthName(dateTaken.Month)}");
+    //Create a path like this: /2021/10 October/ from a DateTime with values like year: 2021, month: 10, etc. 
+    private static string GenerateDatePath(DateTime dateTaken) => Path.Combine(dateTaken.Year.ToString(), $"{dateTaken.Month} {CultureInfo.CurrentCulture.DateTimeFormat.GetMonthName(dateTaken.Month)}");
+    
+    //This is for moving the file to its new home on the server.
+    private static string GenerateSortedDir(DateTime dateTaken) => Path.Combine(PSS.Settings.libFolderFullPath, GenerateDatePath(dateTaken));
+    
+    //Get if an item is already on the server (already in your library).
     private static bool ItemExists(string filename, DateTime dateTaken) => File.Exists(Path.Combine(GenerateSortedDir(dateTaken), Path.GetFileName(filename)));
 
     private static void ToggleAlbums()
