Improved error handling and improved reading of filenames.

--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -4,6 +4,7 @@
 #mainDiv {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     position: absolute;
     left: 145px;
     background-color: darkgreen;
