add loading="lazy" to img tags

--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -16,7 +16,7 @@
         <div id="mainDiv">
             @foreach (MediaRow media in mediaList)
             {
-                <img style="color: white" src="@PSS.Settings.requestPath/@media.path" onclick="location.href='/view/@media.uuid'" class="thumbnail" alt="@PSS.Settings.requestPath/@media.path" />
+                <img style="color: white" src="@PSS.Settings.requestPath/@media.path" onclick="location.href='/view/@media.uuid'" class="thumbnail" alt="@PSS.Settings.requestPath/@media.path" loading="lazy" />
             }
         </div>
     }
