--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -8,7 +8,7 @@
 @{
     if (mediaList.Count == 0)
     {
-        <h1 class="indexCenteredWhiteText">Looks empty here...<br />Upload some items to get started.</h1>
+        <h1>Looks empty here...<br />Upload some items to get started.</h1>
     }
     else
     {
@@ -25,5 +25,6 @@
 }
 
 @code {
-    private readonly List<MediaRow> mediaList = LoadMediaTable();
+    private  static readonly List<MediaRow> mediaList = LoadMediaTable();
+    private static List<Guid> selectedItems = new(); //Dynamically updated at runtime.
 }
