--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -1,6 +1,16 @@
 /* Stuff for just Index.razor */
 /* This stuff is for sure not used elsewhere */
 
+h1 {
+    color: white;
+    font-family: 'Product Sans', sans-serif;
+    text-align: center;
+    position: absolute;
+    top: 36%;
+    left: 36%;
+    user-select: none;
+}
+
 #mainDiv {
     display: flex;
     flex-direction: row;
@@ -9,33 +19,37 @@
     left: 145px;
 }
 
-    #mainDiv .thumbnail {
-        cursor: pointer;
-    }
+#mainDiv .thumbnail {
+    cursor: pointer;
+}
 
-        #mainDiv .thumbnail span {
-            opacity: 0;
-            height: 24px;
-            width: 24px;
-            position: absolute;
-            box-sizing: border-box;
-            color: #fff;
-            outline: none;
-            margin-top: 8px;
-            margin-left: 8px;
-            fill-opacity: .54;
-            transition: 0.3s;
-            transition-property: opacity,fill-opacity;
-        }
+#mainDiv .thumbnail span {
+    opacity: 0;
+    height: 24px;
+    width: 24px;
+    position: absolute;
+    box-sizing: border-box;
+    color: #fff;
+    outline: none;
+    margin-top: 8px;
+    margin-left: 8px;
+    fill-opacity: .54;
+    transition: 0.3s;
+    transition-property: opacity, fill-opacity;
+}
 
-        #mainDiv .thumbnail:hover span { /* Show checkbox on hover */
-            opacity: 0.42;
-        }
+#mainDiv .thumbnail:hover span { /* Show checkbox on hover */
+    opacity: 0.42;
+}
+
+#mainDiv .thumbnail span:hover { /* Make it 100% opaque */
+    opacity: 1;
+}
 
 
-        #mainDiv .thumbnail img {
-            height: 200px;
-            margin-left: 3px;
-            margin-right: 3px;
-            margin-top: 3px;
-        }
+#mainDiv .thumbnail img {
+    height: 200px;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-top: 3px;
+}
