--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -16,7 +16,7 @@
             @foreach (MediaRow media in mediaList)
             {
                 <div class="thumbnail">
-                    <span class="material-icons">check_circle</span>
+                    <span class="material-icons unchecked">check_circle</span>
                     <img style="color: white" src="@PSS.Settings.requestPath/@media.path" onclick="location.href = '/view/@media.uuid'" alt="@PSS.Settings.requestPath/@media.path" loading="lazy" />
                 </div>
             }
